# Team3

./: .gitignore  BasicDrawing.cpp  BasicDrawing.h  CMakeLists.txt  DrawingStrategy.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphView.cpp  GraphView.h  IDrawing.h  MainWindow.cpp  MainWindow.h  MinimalisticDrawingStrategy.cpp  MinimalisticDrawingStrategy.h  Node.cpp  Node.h  Point.h  README.md  conanfile.txt  main.cpp  mainwindow.ui  resources.qrc
builder/: JSONReader.cpp  JSONReader.h
drawing/: ClassicalDrawingStrategy.cpp  ClassicalDrawingStrategy.h  DrawingStrategy.cpp  DrawingStrategy.h  MinimalisticDrawingStrategy.cpp  MinimalisticDrawingStrategy.h  Point.h  Shape.cpp
graph/: Edge.cpp  Graph.cpp  Graph.h  Node.cpp  Node.h
graphsJSON/: graph1.json  graph2.json
source-code/: MainWindow.h  main.cpp
source-code/builder/: JSONReader.cpp  JSONReader.h
source-code/components/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
source-code/components/map-objects/: City.cpp  City.h  Market.cpp  Market.h  Post.cpp  Post.h  Storage.cpp  Storage.h  Train.cpp  Train.h
source-code/components/static/: StaticStore.cpp  StaticStore.h
source-code/drawing/: AssetManager.cpp  AssetManager.h  Circle.cpp  Circle.h  ClassicalDrawingStrategy.cpp  Line.cpp  Line.h  Point.h  Renderer.cpp  Renderer.h  RotationCalculator.cpp  RotationCalculator.h  Shape.h
source-code/game/: Camera.cpp  Camera.h  Configuration.cpp  Configuration.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  ServerConnection.cpp  ServerConnection.h
source-code/graph/: City.cpp  City.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Market.cpp  Market.h  Node.cpp  Node.h  Storage.cpp  Storage.h  Train.cpp  Train.h
source-code/layout/: Layout.cpp  Layout.h
source-code/utils/: BinaryConverter.cpp  BinaryConverter.h  HexConverter.cpp  HexConverter.h  RotationCalculator.cpp  RotationCalculator.h
source-code/view/: GraphView.h
src/: Observer.cpp  Observer.h  Player.cpp  Player.h  Point.h
src/agents/: GraphAgent.cpp  GraphAgent.h  MoveAgent.cpp  MoveAgent.h  RenderAgent.cpp  RenderAgent.h  ServerConnectorAgent.cpp  ServerConnectorAgent.h  TrainsAgent.cpp  TrainsAgent.h  UpgradeAgent.cpp  UpgradeAgent.h
src/configs/: defines.h
src/game-components/: Event.h  Player.cpp  Player.h  Train.cpp  Train.h
src/graph-components/: Edge.cpp  Edge.h  EdgeCreationHelper.h  Hometown.cpp  Hometown.h  Market.cpp  Market.h  Node.cpp  Node.h  Storage.cpp  Storage.h  Town.cpp  Town.h
src/networking-components/: JSONParser.cpp  JSONParser.h  JSONReader.cpp  JSONReader.h  Request.h  Response.h
src/render-components/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Configuration.cpp  Configuration.h  GameMapConfig.cpp  GameMapConfig.h  Point.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  RotationCalculator.cpp  RotationCalculator.h
view/: GraphView.cpp
